# mlm-pipeline

./: .gitignore  pyproject.toml
mlml_hugginface/: CLI.py  __init__.py  change.py  collator.py  download.py  generate_custom_model.py  predict.py  save_hfModel_locally.py  self_attention.py  train.py  trainer.py  utils.py
mlml_hugginface/model-classes/: dummy.py  learner_personalized_model_1.py  learner_personalized_model_2.py
notebooks/: train.ipynb
run_configs/: generate.json  train.json  train_new_model.json
