[tool.poetry]
name = "mlml-hugginface"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mlml_hugginface"}]

[tool.poetry.dependencies]
python = "^3"
transformers = "^4.35.2"
torch = "^2.1"
datasets = "^2.15.0"
typer = "^0.9.0"
accelerate = "^0.24.1"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"

[tool.taskipy.tasks]
bluec = "blue --check --diff ./mlml_hugginface/change.py"
bluet = "blue --check --diff ./mlml_hugginface/train.py"
bluep = "blue --check --diff ./mlml_hugginface/predict.py"
isort = "isort --check-only --diff --recursive ./mlml_hugginface/train.py"
generate = "task bluec && python ./mlml_hugginface/CLI.py generate run_configs/generate.json"
train = "task bluet && python ./mlml_hugginface/CLI.py train run_configs/train.json"
predict = "task bluep && python ./mlml_hugginface/CLI.py predict run_configs/predict.json"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
